z-index fix

--- a/resources/less/grid-nav.less
+++ b/resources/less/grid-nav.less
@@ -67,7 +67,7 @@
         width: 250px;
         left: -250px;
         top: 60px;
-        z-index: 2;
+        z-index: 5;
         overflow-y: auto;
         -webkit-overflow-scrolling: touch;
 
